2009-05-10  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  aclocal gather all the necessary macros. And libtoolize installs m4 files.
	  They must be present before running aclocal. Without this patch, autoconf
	  complains about unknown libtool macros (using 2.2.6a-4 on Debian).

2009-05-09  Stefan Kost  <ensonic@users.sf.net>

	* Elak/Dist2/Elak_Dist2.bmx:
	* Elak/Dist2/Makefile.am:
	* Elak/SVF/Elak_SVF.bmx:
	* Elak/SVF/Makefile.am:
	* Jeskola/Ninja/Jeskola_NiNjA_dElaY.bmx:
	* Jeskola/Ninja/Makefile.am:
	* Makk/M4/Makefile.am:
	* Makk/M4/Makk_M4.bmw:
	* Makk/M4/Makk_M4.bmw (added):
	* Jeskola/Ninja/Jeskola_NiNjA_dElaY.bmx (added):
	* Elak/Dist2/Elak_Dist2.bmx (added):
	* Elak/SVF/Elak_SVF.bmx (added):
	  Add more demo songs and fix Elak/Dist name to be Dist2.

2009-05-07  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/PhatMan.cpp:
	  Comment out leftover printf.

2009-05-07  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/README:
	  First quick study, what we need to rewrite Jeskola Bass from scratch.

2009-05-06  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/CrossDelay/CrossDelay.cpp:
	* Jeskola/CrossDelay/Makefile.am:
	* Jeskola/Makefile.am:
	* configure.ac:
	* Jeskola/CrossDelay (added):
	* Jeskola/CrossDelay/Makefile.am (added):
	* Jeskola/CrossDelay/CrossDelay.cpp (added):
	  Rewrite CrossDelay from scratch (no source available).

2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* Makk/M3/Makefile.am:
	* Makk/M3/Makk_M3.prs:
	* Makk/M4/Makefile.am:
	* Makk/M4/Makk_M4.prs:
	* Makk/M3/Makk_M3.prs (added):
	* Makk/M4/Makk_M4.prs (added):
	  Yes, more presets.

2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  One more error added.

	* Jeskola/Delay/Delay.cpp:
	* Jeskola/Delay/Makefile.am:
	* Jeskola/Makefile.am:
	* configure.ac:
	* Jeskola/Delay/Makefile.am (added):
	  Ported one more.

2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* CyanPhase/DTMF/Makefile.am:
	  Fix element name.
