@@ -1,3 +1,9 @@
+2009-05-14  Stefan Kost  <ensonic@users.sf.net>
+
+	* Matilde/Tracker/Tracker.cpp:
+	  V1 API variants where one octave down, as we haven't initialized the
+	  hidden V2 params to their defaults.
+
 2009-05-10  Stefan Kost  <ensonic@users.sf.net>
 
 	* autogen.sh:
